welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:10: error: Unit does not take parameters
	{ FaireV(); gauche()()}
                            ^